tests/fixtures/invalid/e002/duplicate_id.spec
invariant data_integrity "First" {
  guarantee """must hold"""
}

invariant data_integrity "Second" {
  guarantee """must also hold"""
}
